将Values类的接口做了一些修改, 并加入了拦截式业务型序列化方法